--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+
 </head>
 
 <body>
@@ -35,6 +36,51 @@
                 Load More
             </button>
         </div>
+
+
+  <div class="pokemon-card">
+  <div class="card-header">
+    <h2>#001 Bulbasaur</h2>
+    <img src="bulbasaur.png" alt="Bulbasaur">
+  </div>
+
+  <div class="card-body">
+    <h3>About</h3>
+    <p><strong>Species:</strong> Seed</p>
+    <p><strong>Height:</strong> 2'4" (0.70 m)</p>
+    <p><strong>Weight:</strong> 15.2 lbs (6.9 kg)</p>
+    <p><strong>Abilities:</strong> Overgrow, Chlorophyll</p>
+
+    <hr>
+
+    <h3>Breeding</h3>
+    <p><strong>Gender:</strong> 87.5% ♂, 12.5% ♀</p>
+    <p><strong>Egg Group:</strong> Monster</p>
+    <p><strong>Egg Cycle:</strong> Grass</p>
+  </div>
+</div>
+
+  <div class="card-body">
+    <div class="tabs">
+      <button class="active">About</button>
+      <button>Base Stats</button>
+      <button>Evolution</button>
+      <button>Moves</button>
+    </div>
+
+    <div class="info">
+      <p><strong>Species:</strong> Seed</p>
+      <p><strong>Height:</strong> 2' 4" (0.70 m)</p>
+      <p><strong>Weight:</strong> 15.2 lbs (6.9 kg)</p>
+      <p><strong>Abilities:</strong> Overgrow, Chlorophyll</p>
+      <hr>
+      <p><strong>Gender:</strong> 87.5% ♂, 12.5% ♀</p>
+      <p><strong>Egg Group:</strong> Monster</p>
+      <p><strong>Egg Cycle:</strong> Grass</p>
+    </div>
+  </div>
+</div>
+
     </section>
 
     <!-- Nosso JS -->
@@ -44,3 +90,9 @@
 </body>
 
 </html>
+
+
+
+  
+
+
