--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="pokemon-card">
   <div class="card-header">
     <h2>#001 Bulbasaur</h2>
-    <img src="bulbasaur.png" alt="Bulbasaur">
+    <img src="assets/images/bulbasaur.png" alt="Bulbasaur">
   </div>
 
   <div class="card-body">
